api get discount and create discount
